feat: adicionado rota para salvar imagem no banco
